Modifying the structure of the code